--- a/templates/emprestimos.html
+++ b/templates/emprestimos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Painel de Empréstimos | PET Elétrica UFU</title>
+    <title>Gestão de Empréstimos | PET Elétrica UFU</title>
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" href="../static/css/style.css" />
     <!-- ====== ionicons ======= -->
@@ -107,13 +107,6 @@
       <!-- ========================= Main ==================== -->
       <div class="main">
         <div class="topbar">
-          <!-- Botão de toggle comentado (opcional) -->
-          <!--
-          <div class="toggle">
-            <ion-icon name="menu-outline"></ion-icon>
-          </div>
-          -->
-
           <div class="search">
             <label>
               <input
@@ -124,6 +117,7 @@
               <ion-icon name="search-outline"></ion-icon>
             </label>
           </div>
+          <button id="new_borrow">Novo empréstimo</button>
         </div>
 
         <!-- ================ Order Details List ================= -->
