--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Painel de Empréstimos | PET Elétrica UFU</title>
+    <title>Dashboard | PET Elétrica UFU</title>
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" href="../static/css/style.css" />
   </head>
