--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Painel de Empréstimos | PET Elétrica UFU</title>
+    <title>Gestão de Usuários | PET Elétrica UFU</title>
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" href="../static/css/style.css" />
   </head>
@@ -49,7 +49,7 @@
               <span class="icon">
                 <ion-icon name="cube-outline"></ion-icon>
               </span>
-              <span class="title">Produtos</span>
+              <span id="produtos" class="title">Produtos</span>
             </a>
           </li>
 
@@ -90,22 +90,73 @@
           </li> -->
         </ul>
       </div>
-
+<!-- Popup de Edição de Usuário -->
+            <div id="editUserPopup" class="popup" style="display: none;">
+              <div class="popup-content">
+                <span class="close-btn" onclick="closePopup('editUserPopup')">&times;</span>
+                <h2>Editar Usuário</h2>
+                <form id="editUserForm">
+                  <input type="hidden" id="editUserId" />
+                  <label for="editUserName">Nome:</label>
+                  <input type="text" id="editUserName" required />
+                  <label for="editUserCPF">CPF:</label>
+                  <input type="text" id="editUserCPF" maxlength="14" required />
+                  <label for="editUserPhone">Telefone:</label>
+                  <input type="tel" id="editUserPhone" maxlength="15" required />
+                  <label for="editUserCourse">Curso:</label>
+                  <input type="text" id="editUserCourse" required />
+                  <label for="editUserEmail">E-mail:</label>
+                  <input type="text" id="editUserEmail" required />
+                  <button class="btn btn-success" type="submit">Salvar</button>
+                </form>
+              </div>
+            </div>
       <!-- ========================= Main ==================== -->
       <div class="main">
         <div class="topbar">
-          <!-- <div class="toggle">
-            <ion-icon name="menu-outline"></ion-icon>
-          </div> -->
-
+          
           <div class="search">
             <label>
-              <input id="userSearch" type="text" placeholder="Digite o Nome/CPF do Usuário..." />
+              <input id="userSearch" type="text" placeholder="Digite o Nome/CPF do Usuário..."/>
               <ion-icon name="search-outline"></ion-icon>
             </label>
           </div>
+          <button onclick="showPopup('addUserPopup')" id="add_user">Cadastrar Usuário</button>
         </div>
-
+         <!-- Popup para Adicionar Usuário -->
+        <div id="addUserPopup" class="popup" style="display: none;">
+          <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('addUserPopup')">&times;</span>
+            <h2>Cadastrar Novo Usuário</h2>
+            
+            <div class="input_add_user">
+              <label for="nome">Nome:</label>
+              <input type="text" id="nome" placeholder="Zézinho da Silva" /><br>
+            </div>  
+            
+            <div class="input_add_user">
+              <label for="cpf">CPF:</label>
+              <input type="text" maxlength="14" id="cpf" placeholder="123.456.789-01" /><br>
+            </div>
+            
+            <div class="input_add_user">
+              <label for="telefone">Telefone:</label>
+              <input type="text" maxlength="15" id="telefone" placeholder="(34) 91234-5678" /><br>
+            </div>
+            
+            <div class="input_add_user">
+              <label for="email">E-mail:</label>
+              <input type="text" id="email" placeholder="zezin_silva@ufu.br" /><br>
+            </div>
+            <div class="input_add_user">
+              <label for="curso">Curso:</label>
+              <input type="text" id="curso" placeholder="Engenharia de Produção" /><br>
+            </div> 
+            <div class="input_add_user">
+              <button class="btn btn-success" onclick="addUser()">Adicionar</button>
+            </div>
+          </div>
+        </div>
         <!-- ================ Order Details List ================= -->
         <div class="details">
           <div class="recentOrders">
@@ -120,6 +171,7 @@
                   <td>Nome</td>
                   <td>CPF</td>
                   <td>✏️</td>
+                  <td>🗑️</td>
                 </tr>
               </thead>
 
@@ -128,10 +180,10 @@
           </div>
       </div>
     </div>
-
     <!-- =========== Scripts =========  -->
     <script src="../static/js/users.js"></script>
     <script src="../static/js/index.js"></script>
+     <!-- Certifique-se de que o link está correto e ativo -->
 
     <!-- ====== ionicons ======= -->
     <script
