--- a/templates/emprestimos.html
+++ b/templates/emprestimos.html
@@ -103,7 +103,42 @@
           -->
         </ul>
       </div>
+    <!-- Popup para Emprestar Itens -->
+        <div id="borrowItemPopup" class="popup" style="display: none;">
+          <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('borrowItemPopup')">&times;</span>
+            <h2>Emprestar Item</h2>
+            <label for="searchUserInput">Pesquisar Usuário:</label>
+            <input type="text" id="searchUserInput" placeholder="Pesquisar..." />
+            <select id="userSelect">select</select><br><br>
+            
+            <label for="searchItemInput">Pesquisar Item:</label>
+            <input type="text" id="searchItemInput" placeholder="Pesquisar..." />
+           
+            <div id="itemSelectContainer">
+              <select id="itemSelect">select</select><br><br>
+              <label for="itemQuantityInput">Quantidade:</label>
+              <select class="form-control" id="itemQuantityInput">
+              </select><br><br>
+              <label for="DevolucaoPrevistaInput"
+                >Data prevista de devolução:</label
+              >
+            
+              <input type="date" id="DevolucaoPrevistaInput" min="">
+              <script>
+                const hoje = new Date().toISOString().split('T')[0];
+                document.getElementById('DevolucaoPrevistaInput').setAttribute('min', hoje);
+            </script>
+            </div>
 
+            <button class="btn btn-primary btn-sm"  onclick="borrowItemList()">Adicionar Item</button>
+            <button class="btn btn-primary btn-sm"  onclick="limparLista()">Limpar Lista</button>
+            <button class="btn btn-success" onclick="borrowItem()">Finalizar Empréstimo</button>
+            <div></div>
+              <ul style="display: flex; flex-direction: column;" id="lista_de_itens"></ul>
+            </div>
+          </div>
+        </div>
       <!-- ========================= Main ==================== -->
       <div class="main">
         <div class="topbar">
@@ -117,7 +152,7 @@
               <ion-icon name="search-outline"></ion-icon>
             </label>
           </div>
-          <button id="new_borrow">Novo empréstimo</button>
+          <button onclick="showBorrowItemPopup()" id="new_borrow">Novo empréstimo</button>
         </div>
 
         <!-- ================ Order Details List ================= -->
@@ -135,6 +170,7 @@
                   <td>Quantidade</td>
                   <td>Data Emprestimo</td>
                   <td>Data Prevista Devolução</td>
+                  <td>🛄</td>
                 </tr>
               </thead>
 
